Prevent word wrap.

--- a/webapp/public/css/style.css
+++ b/webapp/public/css/style.css
@@ -1,3 +1,5 @@
 textarea {
-  width: 100%
+  width: 100%;
+  white-space: pre;
+  word-wrap: normal;
 }
